--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Desafio Concrete FrontEnd</title>
+
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 <body>
-     <h1>Github Search</h1>
+    <div class="wrap">
+        <div class="title">
+            <span class="title_git">Github</span>
+            <span class="title_search">Search</span>
+        </div>
+        <div class="search">
+           <input type="text" class="searchTerm" placeholder="Quem você está procurando?">
+           <button type="submit" class="searchButton">
+             <i class="fa fa-search"></i>
+          </button>
+        </div>
+     </div>
     
 </body>
 </html>
