--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
             <span class="title_search">Search</span>
         </div>
         <div class="search">
-           <input type="text" class="searchTerm" placeholder="Quem você está procurando?">
-           <button type="submit" class="searchButton">
-             <i class="fa fa-search"></i>
-          </button>
+           <input type="text" class="search__input" id="user" placeholder="Quem você está procurando?">
+           <button type="submit" class="search__button"><i class="fa fa-search"></i></button>
         </div>
      </div>
-    
+
+    <script src="js/jquery-3.4.1.min.js"></script>
 </body>
 </html>
